Legal form now works, updates to CSS in base template

--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -15,6 +15,21 @@
     margin-bottom: 42px;
 }
 
+
+#div_id_code_of_conduct div.controls,
+#div_id_wftda div.controls,
+#div_id_mwd div.controls {
+    margin-left:0;
+}
+
+#div_id_code_of_conduct div.controls textarea,
+#div_id_wftda div.controls textarea,
+#div_id_mwd div.controls textarea {
+    width: 98%;
+    height: 150px;
+    font-size: 9pt;
+    margin-top:20px;
+}
 </style>
 
 {% block head %}{% endblock %}
