--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -2,19 +2,77 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=650">
+
 <title>{% block title %}MWD Registration{% endblock %}</title>
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
+<link href='http://fonts.googleapis.com/css?family=Kreon' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" type="text/css" />
 <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js" type="text/javascript"></script>
 
 <style type="text/css">
+
+/*  view-source:http://twitter.github.com/bootstrap/examples/sticky-footer.html */
+html, body {
+    height: 100%;
+}
+
+#wrap {
+    min-height: 100%;
+        height: auto !important;
+        height: 100%;
+        /* Negative indent footer by it's height */
+        margin: 0 auto -60px;
+}
+
+/* Set the fixed height of the footer here */
+#push, #footer {
+        height: 80px;
+}
+
+#footer {
+        background-color: #f5f5f5;
+}
+
+
+
 .header {
     text-align: center;
     margin-bottom: 42px;
 }
 
+.reg-line1, .reg-line2 {
+    font-family: 'Kreon', serif;
+}
+
+.reg-line1 {
+    font-size: 38px;
+    height: 48px;
+}
+
+.reg-line1 span {
+    font-size: 30px;
+}
+
+
+.reg-line2 {
+    font-size: 57px;
+}
+
+.header {
+    background-color: #f9fc69;
+    height: 88px;
+    width: 500px;
+    margin: -1px auto 32px auto;
+
+    border-bottom-left-radius: 60px;
+    border-bottom-right-radius: 60px;
+    -moz-box-shadow: 2px 5px 6px #888;
+    -webkit-box-shadow: 2px 5px 6px #888;
+    box-shadow: 2px 5px 6px #888;
+}
 
 #div_id_code_of_conduct div.controls,
 #div_id_wftda div.controls,
@@ -30,30 +88,142 @@
     font-size: 9pt;
     margin-top:20px;
 }
+
+.turq {
+    background-color: #35e5f4;
+    height: 18px;
+}
+.yell {
+    background-color: #f9fc69;
+    height: 18px;
+    -moz-box-shadow: 2px 5px 6px #888;
+    -webkit-box-shadow: 2px 5px 6px #888;
+    box-shadow: 2px 5px 6px #888;
+}
+
+.shadow-top {
+    border-top: 1px solid #eaeaea;
+}
+
+.container {
+    width: 550px;
+}
+
+h1 {
+    font-size: 24px;
+}
+
+.step {
+    border-bottom: 1px dotted #eaeaea;
+    text-transform: uppercase;
+    color: #8e8e8e;
+    letter-spacing: 2.3pt;
+    margin: -28px 8px 30px 8px;
+    text-align: right;
+    width: 550px;
+    font-size: smaller;
+}
+
+.help-block {
+    font-size: smaller;
+}
+
+.asteriskField {
+    display: none;
+}
+
+#button-id-button {
+    margin-right: 20px;
+}
+
+/* STEP ONE */
+
+#div_id_derby_number {
+    margin-bottom: 50px;
+}
+
+
+/* STEP FOUR */
+
+.skater-info, .due-date {
+    margin-bottom: 10px;
+    font-size: larger;
+}
+
+.skater-info span {
+    font-weight: bold;
+}
+
+.due-date {
+    font-weight: bold;
+}
+
+.hide {
+    display: none;
+}
+
 </style>
+
+<script type="text/javascript">
+
+$(document).ready(function() {
+    $('#button-id-button').click(function() { window.history.go(-1) });
+    $('#id_mwd').attr("readonly", "readonly");
+});
+
+</script>
+
 
 {% block head %}{% endblock %}
 </head>
 <body>
+ <div id="wrap">
+    <div class="turq"></div>
+    <div class="yell"></div>
+
     <div class="container">
     
         <div class="header">
-            <h1>MWD REGISTRATION</h1>
+            <div class="reg-line1">
+                <span>&#9733;</span>
+                MAD WRECKIN' DOLLS
+                <span>&#9733;</span>
+            </div>
+            <div class="reg-line2">REGISTRATION</div>
         </div>
 
         <div class="content"> 
             <div class="row">
-                <div class="span3"></div>
-                <div class="span6">
+
+<h1>{{ step_info }}</h1>
+
+
+                <!-- begin step block -->
+
+{% block step %}{% endblock %}
+
+                <!-- end step block -->
+
+
+
                 <!-- begin content block -->
 
 {% block content %}{% endblock %}
  
                 <!-- end content block-->
-                </div>
-                <div class="span3"></div>
+
+
             </div>
         </div>
     </div>
+    <div id="push"></div>
+  </div> <!-- wrap -->
+  <div id="footer">
+    <div class="yell shadow-top"></div>
+    <div class="turq"></div>
+    <div class="container" style="font-size:10px;">
+        <a href="http://github.com/dsilvers/mwd" target="_blank">Powered by MWD</a>
+    </div>
+  </div>
 </body>
 </html>
