New utility functions file, registration now saves skater records and redirects to a done view.

--- a/templates/registration/done.html
+++ b/templates/registration/done.html
@@ -1,1 +1,8 @@
-done
+{% extends "registration/base.html" %}
+{% load i18n %}
+
+{% block content %}
+
+<div class="alert alert-success">You are done registering! We should probably put a summary here and polish up a confirmation email.</div>
+
+{% endblock %}
