--- a/templates/frontpage/index.html
+++ b/templates/frontpage/index.html
@@ -5,6 +5,22 @@
 <title>Mad Wreckin' Dolls - Madison Roller Derby Rec League</title>
 <meta name="description" content="Recreational Roller Derby League in Madison, Wisconsin.">
 
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-37148332-1']);
+  _gaq.push(['_setDomainName', 'madwreckindolls.com']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
+
 <style type="text/css">
 
 html, body {
@@ -28,6 +44,8 @@ body {
 
 
 </style>
+
+
 
 </head>
 <body>
