--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -12,6 +12,21 @@
 <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" type="text/css" />
 <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js" type="text/javascript"></script>
 
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-37148332-1']);
+  _gaq.push(['_setDomainName', 'madwreckindolls.com']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
 <style type="text/css">
 
 /*  view-source:http://twitter.github.com/bootstrap/examples/sticky-footer.html */
