Fix margin/spacing in header of registration template.

--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -126,6 +126,7 @@ html, body {
 
 h1 {
     font-size: 24px;
+    padding-left: 6px;
 }
 
 .step {
@@ -133,7 +134,7 @@ h1 {
     text-transform: uppercase;
     color: #8e8e8e;
     letter-spacing: 2.3pt;
-    margin: -28px 8px 30px 8px;
+    margin: -33px 8px 30px 8px;
     text-align: right;
     width: 550px;
     font-size: smaller;
