--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -158,6 +158,14 @@ h1 {
     margin-bottom: 50px;
 }
 
+#div_id_first_name {
+    margin-top: 50px;
+}
+
+#id_zip {
+    width: 80px;
+}
+
 /* STEP TWO */
 
 #div_id_wftda_confirm {
