--- a/templates/registration/payment-registration-form.html
+++ b/templates/registration/payment-registration-form.html
@@ -118,13 +118,16 @@ function stripeResponseHandler(status, response)
 {% block content %}
 
 <div class="skater-info">
-    <span>Active</span> skater dues are <span>$</span>
+    February dues are <span>${{ dues_amount }}</span>.
 </div>
+
+<br>
 
 <div class="due-date">
     Dues must be received by {{ REGISTRATION_DEADLINE|safe }}.
 </div>
 
+<br>
 
 {% if error %}
 <!-- general error message -->
