Payment registration form UI tweaks.

--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -179,6 +179,14 @@ h1 {
 
 /* STEP FOUR */
 
+input[type="radio"] {
+    margin: 0 8px 0;
+}
+
+.payment_div {
+    margin-bottom: 20px;
+}
+
 .skater-info, .due-date {
     margin-bottom: 10px;
     font-size: larger;
