Pre-registration warning message, pre_reg_only URL validation.

--- a/templates/registration/pre-reg-only-sorry.html
+++ b/templates/registration/pre-reg-only-sorry.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 
-<div class="alert alert-error">Sorry! Pre-registation skaters only. blurb about this?</div>
+<div class="alert alert-error">Sorry! Registration is only open to eligible skaters from the Fall session at the current moment. Registration will open to the public soon. Contact <a href="mailto:{{ mailto }}">{{ mailto }}</a> for more information.</div>
 
 {% endblock %}
