--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -182,6 +182,12 @@ h1 {
     margin-top: 60px;
 }
 
+/* STEP THREE POINT FIVE */
+
+#id_anything_else_registration {
+    width: 100%;
+}
+
 
 /* STEP FOUR */
 
@@ -223,6 +229,11 @@ $(document).ready(function() {
             changeYear: true,
             yearRange: "-70:+0"
     });
+
+    if($('#id_anything_else_registration'))
+    {
+        $('.form-actions').css('text-align', 'center');
+    }
 
     if($('#div_id_wftda_confirm')) {
         // Select YES if WFTDA number is populated.
