--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -91,6 +91,10 @@ html, body {
     box-shadow: 2px 5px 6px #888;
 }
 
+#div_id_derby_name {
+    margin-top: 50px;
+}
+
 #div_id_code_of_conduct div.controls,
 #div_id_wftda div.controls,
 #div_id_mwd div.controls {
