Fix spacing and sizing of allery info textarea.

--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -95,6 +95,11 @@ html, body {
     margin-top: 50px;
 }
 
+#id_allergies {
+    width:100%;
+    height: 100px;
+}
+
 #div_id_code_of_conduct div.controls,
 #div_id_wftda div.controls,
 #div_id_mwd div.controls {
