Tweak registration email, body and footer.

--- a/templates/emails/registration.html
+++ b/templates/emails/registration.html
@@ -3,7 +3,7 @@
 <br>
 Hello {{ skater_short_name }},<br>
 <br>
-You are now registered for the {{ session.name }} session.{{ intro|safe }}<br>
+{{ intro|safe }}<br>
 <br>
 Here's what you submitted on the registration form. Please reply to this email if anything needs to be changed.<br>
 <br>
