Send name to stripe for credit card payments.

--- a/templates/registration/payment-registration-form.html
+++ b/templates/registration/payment-registration-form.html
@@ -42,6 +42,7 @@ $(document).ready(function() {
         {
             // Attempt to submit the card to stripe
             Stripe.createToken({
+		name: $('#cc_name').val(),
                 number: $('#cc_num').val(),
                 cvc: $('#cc_cvc').val(),
                 exp_month: $('#cc_month').val(),
