Last minute lottery invite changes and tweaks

--- a/templates/emails/reg-lottery-invite.html
+++ b/templates/emails/reg-lottery-invite.html
@@ -3,19 +3,20 @@
 
 Hey Fellow Derby Girl!<br>
 <br>
-Your name has been pulled in our lottery and you have a spot reserved for you in the Spring 2013 Mad Wreckin Dolls session!<br>
+Your name has been pulled in our lottery and you have a spot reserved for you in the Spring 2013 Mad Wreckin' Dolls session!<br>
 <br>
 Here is what we need from you to get started:<br>
 <br>
-<ol>
-<li><a href="https://madwreckindolls.com/registration/{{ skater.id }}/{{ skater.user_hash }}">Fill out the registration form online at this link</a> - please be prepared to submit your first month's dues via credit card (or be ready to submit a check).</li>
-<li>You will receive a confirmation e-mail stating that your registration was accepted.</li>
-<li>There will be a waiver attached to that e-mail that you need to fill out and return to The Auditor or Trueblood.</li>
+<ol style="padding:3px;">
+<li style="margin-bottom:8px;"><a href="https://madwreckindolls.com/registration/{{ skater.id }}/{{ skater.user_hash }}" style="font-weight:bold;">Fill out the registration form online at this link</a> - please be prepared to submit your first month's dues via credit card (or be ready to submit a check).</li>
+<li style="margin-bottom:8px;">You will receive a confirmation e-mail stating that your registration was accepted.</li>
+<li style="margin-bottom:8px;">There will be a waiver attached to that e-mail that you need to fill out and return to The Auditor or Trueblood.</li>
 </ol><br>
-<br>
 If you are unable to fill out the registration form or print the waiver from home/work, please contact The Auditor or Trueblood immediately and we will try to make arrangements to help you complete your registration.<br>
 <br>
-If you have prior skating experience and want to be placed in a higher level, please contact the training managers at madwreckindoll@gmail.com.<br>
+If you have prior skating experience and want to be placed in a higher level, please contact the training managers at <a href="mailto:madwreckindoll@gmail.com">madwreckindolls@gmail.com</a>.<br>
+<br>
+If you are interested in purchasing insurance or anticipate being placed in a higher level, please email the board for more information.<br>
 <br>
 Dates to be aware of:<br>
 <br>
@@ -33,6 +34,6 @@ We look forward to skating with you!<br>
 <br>
 Trueblood & The Auditor<br>
 Administration and Financial co-chairs<br>
-<a href="mailto:madwreckindolls@gmail.com">madwreckindolls@gmail.com"></a><br>
+<a href="mailto:madwreckindolls@gmail.com">madwreckindolls@gmail.com</a><br>
 
 {% endblock %}
