Dues payment page in rink is now communicating with stripe. New stripe processing functions in skater model. Automatic payment toggling in rink portal.

--- a/templates/rink/login.html
+++ b/templates/rink/login.html
@@ -12,7 +12,7 @@
 }
 </style>
 
-<div style="margin-top:30px;" class="span4">
+<div class="span4">
 
 <form action="{% url "django.contrib.auth.views.login" %}" method="post" class="form-horizontal">
 
