--- a/templates/rink/base.html
+++ b/templates/rink/base.html
@@ -30,7 +30,7 @@
     <style>
       
       .content {
-        padding-top: 60px;
+        padding-top: 100px;
       }
     
       /* Sticky footer styles
@@ -59,7 +59,6 @@
       #footer {
         background-color: #f5f5f5;
         font-size: smaller;
-        text-align: right;
         padding-top: 5px;
       }
 
@@ -84,6 +83,9 @@
     </style>
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-responsive.min.css" rel="stylesheet">
     
+    {% block head %}
+    {% endblock %}
+
   </head>
 
   <body>
@@ -124,9 +126,6 @@
     <div class="container content">
 
       {% block content %}
-
-      <h1>Bootstrap starter template</h1>
-      <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
 
       {% endblock %}
 
