Let's call the profile page done for now...'

--- a/templates/rink/base.html
+++ b/templates/rink/base.html
@@ -109,7 +109,7 @@
               
               {% if user.is_authenticated %}
               <li><a href="/rink/dues">Pay Dues</a></li>
-              <li><a href="/rink/profile">My Info</a></li>
+              <li><a href="/rink/profile">My Profile</a></li>
               <li><a href="{% url "django.contrib.auth.views.logout" %}">Logout</a></li>
               {% else %}
               <!-- <li class="active"><a href="{% url "django.contrib.auth.views.login" %}">Login</a></li> -->
