--- a/templates/rink/base.html
+++ b/templates/rink/base.html
@@ -108,8 +108,9 @@
             <ul class="nav">
               
               {% if user.is_authenticated %}
-              <li><a href="/rink/dues">Pay Dues</a></li>
-              <li><a href="/rink/profile">My Profile</a></li>
+              {% if user.is_admin %}<li><a href="{% url "rink.views.admin_tools" %}">Admin Tools</a></li>{% endif %}
+              <li><a href="{% url "rink.views.dues" %}">Pay Dues</a></li>
+              <li><a href="{% url "rink.views.profile" %}">My Profile</a></li>
               <li><a href="{% url "django.contrib.auth.views.logout" %}">Logout</a></li>
               {% else %}
               <!-- <li class="active"><a href="{% url "django.contrib.auth.views.login" %}">Login</a></li> -->
