--- a/templates/rink/dues.html
+++ b/templates/rink/dues.html
@@ -74,7 +74,7 @@ You currently have a dues credit of <strong>${{ user.balance }}</strong>. Neat!
                     <th>Due Date</th>
                     <th>Description</th>
                     <th>Amount</th>
-                    <td>Status</th>
+                    <th>Status</th>
                 </tr>
             </thead>
             <tbody>
