Update text in footer of emails

--- a/templates/emails/base.html
+++ b/templates/emails/base.html
@@ -15,8 +15,8 @@
 <div style="height:18px;background-color:#35E5F4;"></div>
 <div style="font-family:monospace;font-size:11px;margin:0 auto 0 auto;line-height:95%;width:300px;">
 <pre>   THE MWD SITE ROBOT         __
-  THANKS YOU FOR             \&gt; )
- YOUR ATTENTION              /_/
+  REMINDS YOU TO             \&gt; )
+ FALL SMALL                  /_/
                       ____ /\_)
                      /''__Y /
                      \(&gt;66&lt;/
