--- a/templates/rink/admin-billing-tools.html
+++ b/templates/rink/admin-billing-tools.html
@@ -32,6 +32,7 @@
 <table class="table table-hover">
     <thead>
         <tr>
+            <th></th>
             <th>Name</th>
             <th>Real Name</th>
             <th>Balance</th>
@@ -39,7 +40,8 @@
     </thead>
     <tbody>
         {% for skater in skaters %}
-        <tr>
+        <tr onclick="window.location='{% url "rink.views.skater_tools" skater_id=skater.id %}'" style="cursor:pointer">
+            <td><a href="{% url "rink.views.skater_tools" skater_id=skater.id %}"><i class="icon-pencil"></i></a></td>
             <td>{{ skater.derby_name }}</td>
             <td>{{ skater.first_name }} {{ skater.last_name }}</td>
             <td>${{ skater.balance }}</td>
