--- a/templates/rink/admin-skater-tools.html
+++ b/templates/rink/admin-skater-tools.html
@@ -57,13 +57,13 @@ Balance is <b>${{ skater.balance }}</b>.
             </div>
         </div>
         <div class="control-group">
-            <label class="control-label" for="description">Payment Notes:</label>
+            <label class="control-label" for="notes">Payment Notes:</label>
             <div class="controls">
-                <input type="text" name="description">
+                <input type="text" name="notes">
             </div>
         </div>
         <div class="control-group">
-            <label class="control-label" for="description">Amount ($):</label>
+            <label class="control-label" for="amount">Amount ($):</label>
             <div class="controls">
                 <input type="text" name="amount" value="{{ skater.status.dues_amount }}" style="width:50px;">
             </div>
