--- a/templates/emails/march-dues.html
+++ b/templates/emails/march-dues.html
@@ -5,9 +5,21 @@ Hello {{ skater_short_name }},<br>
 <br>
 Two things in this email.<br>
 <br>
-Dues are due on (date). Your dues are ${{ skater.balance }}.<br>
+March dues payments are due on Saturday, March 2. 
+
+{% if skater.balance > 0 %}
+Your dues are <b>${{ skater.balance }}</b>.<br>
+{% else %}
+It doesn't appear that you owe any dues currently. (We have you in the "{{ skater.status.name }}" group.)<br>
+{% endif %}
 <br>
-We have a new website for paying online and managing your account.<br>
+
+{% if skater.balance > 0 and skater.automatic_billing %}
+<b>You have automatic billing enabled. We will attempt to charge your card on 3/2 for your dues.</b><br>
+<br>
+{% endif %}
+
+We have a new website for paying online and managing your account. It's very much a work in work in progress, please let us know if you have any issues.<br>
 <br>
 Here's how to access your account:<br>
 <br>
@@ -16,11 +28,14 @@ Here's how to access your account:<br>
 <b>Email:</b> {{ skater.email }}<br>
 <b>Password:</b> {{ new_password }}<br>
 <br>
-Maybe a rundown of future features or a reminder of other ways to pay?<br>
+If chose not to pay online, you can pay Trueblood or The Auditor in person with cash, checks, or credit card. You can also mail a check to The Auditor. Additionally, is also a MWD mailbox located at The Auditor's, you can place an envelope with your name and payment (cash or check).<br>
 <br>
-THE POSSIBILITIES ARE ENDLESSSSSSS<br>
+Heidi Silvers<br>
+c/o Mad Wreckin' Dolls<br>
+1 Loretta Ct<br>
+Madison, WI 53716<br>
 <br>
-If you have any questions or any problems with the website, please email us. It's a work in progress. Also, our web developer is in Europe getting drunk on wine and French cheese (seriously), so crap, you're boned. Sorry!<br>
+Thanks!<br>
 <br>
 <b>The Auditor and Trueblood</b><br>
 Admin Co-Chairs<br>
