Lottery invite email updates

--- a/templates/emails/reg-lottery-invite.html
+++ b/templates/emails/reg-lottery-invite.html
@@ -20,9 +20,7 @@ If you are interested in purchasing insurance or anticipate being placed in a hi
 <br>
 Dates to be aware of:<br>
 <br>
-<b>January 31st:</b>  All paperwork and dues will be required, in full, by the end of January 31st.  If you fail to make payment by this deadline your spot will be relinquished and passed on to the next person on the waiting list.<br>
-<br>
-<b>February 2nd:</b>  Friends and Family skate day.  Bring your friends and family out to skate with you!  This will be an open skate format and will run from 8 a.m. til noon.  Guests of skaters will be required to sign a waiver and pay $5 for rink time.<br>
+<b>All paperwork and dues will be required, in full, by the end of February 7th</b>.  If you fail to make payment by this deadline your spot will be relinquished and passed on to the next person on the waiting list.<br>
 <br>
 <b>February 4th - 6:00 pm:</b>  All League Meeting - attendance is mandatory.  If you are unable to attend, please contact the board at madwreckindolls@gmail.com.  You will be required to review the minutes from the meeting and sign that you have read them.
 The meeting will be held at the High Noon Saloon - 701 East Washington Avenue, Madison.  Only skaters are invited to attend this meeting so please make arrangements accordingly.<br>
