--- a/templates/emails/pre-reg-invite.html
+++ b/templates/emails/pre-reg-invite.html
@@ -3,13 +3,11 @@
 <br>
 Hello {{ skater_short_name }},<br>
 <br>
-Here is your link to register for the 2013 Spring session. Please fill out the required information and submit payment by the end of Friends and Family Day (January 12, 2013). You will receive a confirmation email after the form is completed with a form that needs to be printed out and signed.<br>
+Here is your link to register for the 2013 Spring session. Please fill out the required information and submit payment by February 18, 2013. You will receive a confirmation email after the form is completed with a form that needs to be printed out and signed.<br>
 <br>
 <div style="font-size:20px;font-weight:bold;">
     <a href="https://madwreckindolls.com/registration/{{ skater.id }}/{{ skater.user_hash }}">Click Here to Register!</a>
 </div>
-<br>
-The Auditor and Trueblood will be accepting payments and signed forms at Friends and Family Day; but please allow us to fully participate in our section.<br>
 <br>
 If you have any questions or any problems with the form, please email the board at <a href="mailto:madwreckindolls@gmail.com">madwreckindolls@gmail.com</a>.<br>
 <br>
