--- a/templates/emails/march-dues.html
+++ b/templates/emails/march-dues.html
@@ -3,8 +3,6 @@
 <br>
 Hello {{ skater_short_name }},<br>
 <br>
-Two things in this email.<br>
-<br>
 March dues payments are due on Saturday, March 2. 
 
 {% if skater.balance > 0 %}
@@ -14,12 +12,12 @@ It doesn't appear that you owe any dues currently. (We have you in the "{{ skate
 {% endif %}
 <br>
 
-{% if skater.balance > 0 and skater.automatic_billing %}
+{% if skater.balance > 0 and skater.automatic_billing and skater.stripe_customer_id != "" %}
 <b>You have automatic billing enabled. We will attempt to charge your card on 3/2 for your dues.</b><br>
 <br>
 {% endif %}
 
-We have a new website for paying online and managing your account. It's very much a work in work in progress, please let us know if you have any issues.<br>
+We have a new website for paying online and managing your account. It's very much a work in progress, please let us know if you have any issues.<br>
 <br>
 Here's how to access your account:<br>
 <br>
