Remove old board members from email and site templates.

--- a/templates/emails/march-dues.html
+++ b/templates/emails/march-dues.html
@@ -26,7 +26,7 @@ Here's how to access your account:<br>
 <b>Email:</b> {{ skater.email }}<br>
 <b>Password:</b> {{ new_password }}<br>
 <br>
-If chose not to pay online, you can pay Trueblood or The Auditor in person with cash, checks, or credit card. You can also mail a check to The Auditor. Additionally, is also a MWD mailbox located at The Auditor's, you can place an envelope with your name and payment (cash or check).<br>
+If chose not to pay online, you can pay The Auditor in person with cash, checks, or credit card. You can also mail a check to The Auditor. Additionally, is also a MWD mailbox located at The Auditor's, you can place an envelope with your name and payment (cash or check).<br>
 <br>
 Heidi Silvers<br>
 c/o Mad Wreckin' Dolls<br>
@@ -35,8 +35,8 @@ Madison, WI 53716<br>
 <br>
 Thanks!<br>
 <br>
-<b>The Auditor and Trueblood</b><br>
-Admin Co-Chairs<br>
+<b>The Auditor</b><br>
+Membership and Finance<br>
 Mad Wreckin Dolls<br>
 <br>
 
