--- a/templates/emails/password_reset_email.html
+++ b/templates/emails/password_reset_email.html
@@ -11,8 +11,8 @@ If you still aren't able to login, please email us and we'd be happy to help.
 
 Thanks,
 
+Audi
 MWD Finance
-Audi & Trueblood
 finance@madwreckindolls.com
 
 {% endautoescape %}
