--- a/templates/emails/pre-reg-invite.html
+++ b/templates/emails/pre-reg-invite.html
@@ -11,8 +11,8 @@ Here is your link to register for the 2013 Spring session. Please fill out the r
 <br>
 If you have any questions or any problems with the form, please email the board at <a href="mailto:madwreckindolls@gmail.com">madwreckindolls@gmail.com</a>.<br>
 <br>
-<b>The Auditor and Trueblood</b><br>
-Admin Co-Chairs<br>
+<b>The Auditor</b><br>
+Membership and Finance Chair<br>
 Mad Wreckin Dolls<br>
 <br>
 
