--- a/templates/emails/pre-reg-reminder.html
+++ b/templates/emails/pre-reg-reminder.html
@@ -9,12 +9,12 @@ Hello {{ skater_short_name }},<br>
     <a href="https://madwreckindolls.com/registration/{{ skater.id }}/{{ skater.user_hash }}">Click Here to Register!</a>
 </div>
 <br>
-The Auditor and Trueblood will be accepting payments and signed forms at Friends and Family Day; but please allow us to fully participate in our section.<br>
+The Auditor will be accepting payments and signed forms at Friends and Family Day; but please allow us to fully participate in our section.<br>
 <br>
 If you have any questions or any problems with the form, please email the board at <a href="mailto:madwreckindolls@gmail.com">madwreckindolls@gmail.com</a>.<br>
 <br>
-<b>The Auditor and Trueblood</b><br>
-Admin Co-Chairs<br>
+<b>The Auditor</b><br>
+Finance and Membership Chair<br>
 Mad Wreckin Dolls<br>
 <br>
 
