--- a/templates/emails/reg-lottery-invite.html
+++ b/templates/emails/reg-lottery-invite.html
@@ -10,9 +10,9 @@ Here is what we need from you to get started:<br>
 <ol style="padding:3px;">
 <li style="margin-bottom:8px;"><a href="https://madwreckindolls.com/registration/{{ skater.id }}/{{ skater.user_hash }}" style="font-weight:bold;">Fill out the registration form online at this link</a> - please be prepared to submit your first month's dues via credit card (or be ready to submit a check).</li>
 <li style="margin-bottom:8px;">You will receive a confirmation e-mail stating that your registration was accepted.</li>
-<li style="margin-bottom:8px;">There will be a waiver attached to that e-mail that you need to fill out and return to The Auditor or Trueblood.</li>
+<li style="margin-bottom:8px;">There will be a waiver attached to that e-mail that you need to fill out and return to The Auditor.</li>
 </ol><br>
-If you are unable to fill out the registration form or print the waiver from home/work, please contact The Auditor or Trueblood immediately and we will try to make arrangements to help you complete your registration.<br>
+If you are unable to fill out the registration form or print the waiver from home/work, please contact The Auditor immediately and we will try to make arrangements to help you complete your registration.<br>
 <br>
 If you have prior skating experience and want to be placed in a higher level, please contact the training managers at <a href="mailto:madwreckindoll@gmail.com">madwreckindolls@gmail.com</a>.<br>
 <br>
@@ -30,8 +30,8 @@ The meeting will be held at the High Noon Saloon - 701 East Washington Avenue, M
 Please feel free to contact us if you have any questions!<br>
 We look forward to skating with you!<br>
 <br>
-Trueblood & The Auditor<br>
-Administration and Financial co-chairs<br>
+The Auditor<br>
+Finance and Membership Chair<br>
 <a href="mailto:madwreckindolls@gmail.com">madwreckindolls@gmail.com</a><br>
 
 {% endblock %}
