--- a/templates/registration/done.html
+++ b/templates/registration/done.html
@@ -7,7 +7,7 @@
 
 <div>
 
-There is a form attached, you need to sign the form and hand it to Audi or Trueblood.<br>
+There is a form attached, you need to sign the form and hand it to Audi.<br>
 <b>If you don't have a printer, no sweat!</b> We will have copies at the rink.<br>
 <br>
 {% if balance <= 0 %}
