--- a/templates/emails/new_invoice.html
+++ b/templates/emails/new_invoice.html
@@ -24,7 +24,7 @@ It doesn't appear that you owe any dues currently. (We have you in the "{{ skate
 <br>
 <br>
 
-If chose not to pay online, you can pay Trueblood or The Auditor in person with cash, checks, or credit card. You can also mail a check to The Auditor. Additionally, there is also a MWD mailbox located at The Auditor's, you can place an envelope with your name and payment (cash or check).<br>
+If chose not to pay online, you can pay The Auditor in person with cash, checks, or credit card. You can also mail a check to The Auditor. Additionally, there is also a MWD mailbox located at The Auditor's, you can place an envelope with your name and payment (cash or check).<br>
 <br>
 Heidi Silvers<br>
 c/o Mad Wreckin' Dolls<br>
@@ -33,8 +33,8 @@ Madison, WI 53716<br>
 <br>
 Thanks!<br>
 <br>
-<b>The Auditor and Trueblood</b><br>
-Admin Co-Chairs<br>
+<b>The Auditor</b><br>
+Finance and Membership Chair<br>
 Mad Wreckin Dolls<br>
 <br>
 
