Update registration email template.

--- a/templates/emails/registration.html
+++ b/templates/emails/registration.html
@@ -34,7 +34,7 @@ If you have any questions, please feel free to reply to this email.<br>
 See you on the rink!<br>
 <br>
 Mad Wreckin' Dolls<br>
-<a href="mailto:madwreckindolls@gmail.com">madwreckindolls@gmail.com</a><br>
+<a href="mailto:finance@madwreckindolls.com">finance@madwreckindolls.com</a><br>
 <br>
 
 {% endblock %}
