--- a/templates/emails/summer_invoice.html
+++ b/templates/emails/summer_invoice.html
@@ -3,7 +3,7 @@
 <br>
 Hello {{ skater_short_name }},<br>
 <br>
-All dues payments are due on the 8th of the month.<br>
+All dues payments are due on {{ due_date }}.<br>
 <br>
 <b>SUMMER BILLING NOTE:</b> If you elected to pay for all of summer session in one payment, we've adjusted your balance below accordingly. If you have any questions, feel free to reply to this email and we'll get you squared away.<br>
 <br>
@@ -16,7 +16,7 @@ It doesn't appear that you owe any dues currently. (We have you in the "{{ skate
 <br>
 
 {% if skater.balance > 0 and skater.automatic_billing and skater.stripe_customer_id != "" %}
-<b>You have automatic billing enabled. We will attempt to charge your card automatically for the balance above on the 8th of the month.</b><br>
+<b>You have automatic billing enabled. We will attempt to charge your card automatically for the balance above on {{ due_date }}.</b><br>
 <br>
 {% endif %}
 
