--- a/templates/emails/pre-reg-invite.html
+++ b/templates/emails/pre-reg-invite.html
@@ -3,16 +3,16 @@
 <br>
 Hello {{ skater_short_name }},<br>
 <br>
-Here is your link to register for the 2013 Spring session. Please fill out the required information and submit payment by February 18, 2013. You will receive a confirmation email after the form is completed with a form that needs to be printed out and signed.<br>
+Here is your link to register for the Fall 2013 session. Please fill out the required information and submit payment by Sunday, September 15, 2013. You will receive a confirmation email after the registration form is completed.<br>
 <br>
 <div style="font-size:20px;font-weight:bold;">
     <a href="https://madwreckindolls.com/registration/{{ skater.id }}/{{ skater.user_hash }}">Click Here to Register!</a>
 </div>
 <br>
-If you have any questions or any problems with the form, please email the board at <a href="mailto:madwreckindolls@gmail.com">madwreckindolls@gmail.com</a>.<br>
+If you have any questions or any problems with the form, please email the board at <a href="mailto:finance@madwreckindolls.com">finance@madwreckindolls.com</a>.<br>
 <br>
 <b>The Auditor</b><br>
-Membership and Finance Chair<br>
+Membership & Finance Chair<br>
 Mad Wreckin Dolls<br>
 <br>
 
