--- a/templates/emails/pre-reg-invite.html
+++ b/templates/emails/pre-reg-invite.html
@@ -3,16 +3,21 @@
 <br>
 Hello {{ skater_short_name }},<br>
 <br>
-Here is your link to register for the Fall 2013 session. Please fill out the required information and submit payment by Sunday, September 15, 2013. You will receive a confirmation email after the registration form is completed.<br>
+Here is the link to register for the 2013 Fall session. Please fill out the required information and submit payment by September 15, 2013. You will receive a confirmation email after the form is completed.<br>
+<br>
+<b>If you are currently in Babydolls and want to skate with MWD if you do not get drafted, you will need to register now.</b> You must notify Audi by September 28, 2013 if you are not going to participate to get a full refund.<br>
+<br>
+<b>Please note, practice days and times are undetermined at this time.</b><br>
+<br>
 <br>
 <div style="font-size:20px;font-weight:bold;">
     <a href="https://madwreckindolls.com/registration/{{ skater.id }}/{{ skater.user_hash }}">Click Here to Register!</a>
 </div>
 <br>
-If you have any questions or any problems with the form, please email the board at <a href="mailto:finance@madwreckindolls.com">finance@madwreckindolls.com</a>.<br>
+If you have any questions or any problems with the form, please email Audi at <a href="mailto:finance@madwreckindolls.com">finance@madwreckindolls.com</a>.<br>
 <br>
 <b>The Auditor</b><br>
-Membership & Finance Chair<br>
+Membership &amp; Finance Chair<br>
 Mad Wreckin Dolls<br>
 <br>
 
