Fix dates on registration done pages.

--- a/templates/registration/payment-registration-form.html
+++ b/templates/registration/payment-registration-form.html
@@ -119,7 +119,7 @@ function stripeResponseHandler(status, response)
 {% block content %}
 
 <div class="skater-info">
-    February dues are <span>${{ skater.balance }}</span>.
+    First month dues are <span>${{ skater.balance }}</span>.
 </div>
 
 <br>
