--- a/templates/registration/done.html
+++ b/templates/registration/done.html
@@ -7,17 +7,13 @@
 
 <div>
 
-There is a form attached, you need to sign the form and hand it to Audi.<br>
-<b>If you don't have a printer, no sweat!</b> We will have copies at the rink.<br>
-<br>
 {% if balance <= 0 %}
-It looks like you are all paid up for February dues. Nice work!<br>
+It looks like you are all paid up on dues. Nice work!<br>
 <br>
-Once you turn in the signed form, you are all signed up to skate!<br>
 {% else %}
-<b>Also, you need to pay your February dues of ${{ balance }} when you turn in the signed form.</b> We'll happily take your hard earned cash, check or credit cards.<br>
+<b>You need to pay dues of ${{ balance }}.</b> We'll happily take your hard earned cash, check or credit cards.<br>
 <br>
-Once you turn in the signed form and dues, you are all signed up to skate!<br>
+Once paid up, you are all signed up to skate!<br>
 {% endif %}
 <br>
 <br>
