--- a/templates/emails/base.html
+++ b/templates/emails/base.html
@@ -16,10 +16,10 @@
 <div style="font-family:monospace;font-size:11px;margin:0 auto 0 auto;line-height:95%;width:300px;">
 <pre>   THE MWD SITE ROBOT         __
   REMINDS YOU TO             \&gt; )
- TAKE CARE WHEN              /_/
-NAVIGATING THE        ____ /\_)
+ ENJOY THE NEW               /_/
+ LIGHTS AT            ____ /\_)
  FAST FORWARD        /''__Y /
-SEA OF POTHOLES      \(&gt;66&lt;/
+                     \(&gt;66&lt;/
                       /\_\_)
                     _/     \__
                    (_\/\      \
