sub MWD for us.

--- a/templates/emails/pre-reg-invite.html
+++ b/templates/emails/pre-reg-invite.html
@@ -5,7 +5,7 @@ Hello {{ skater_short_name }},<br>
 <br>
 Here is the link to register for the 2013 Fall session. Please fill out the required information and submit payment by September 15, 2013. You will receive a confirmation email after the form is completed.<br>
 <br>
-<b>If you are currently in Babydolls and want to skate with MWD if you do not get drafted, you will need to register now.</b> You must notify Audi by September 28, 2013 if you are not going to participate to get a full refund.<br>
+<b>If you are currently in Babydolls and want to skate with us if you do not get drafted, you will need to register now.</b> You must notify Audi by September 28, 2013 if you are not going to participate to get a full refund.<br>
 <br>
 <b>Please note, practice days and times are undetermined at this time.</b><br>
 <br>
