--- a/templates/emails/receipt.html
+++ b/templates/emails/receipt.html
@@ -19,8 +19,10 @@ If you have any questions, please feel free to reply to this email.<br>
 <br>
 See you on the rink!<br>
 <br>
+Audi<br>
+Finance &amp; Membership Chair
 Mad Wreckin' Dolls<br>
-<a href="mailto:madwreckindolls@gmail.com">madwreckindolls@gmail.com</a><br>
+<a href="mailto:finance@madwreckindolls.com">finance@madwreckindolls.com</a><br>
 <br>
 
 {% endblock %}
