--- a/templates/emails/receipt.html
+++ b/templates/emails/receipt.html
@@ -20,7 +20,7 @@ If you have any questions, please feel free to reply to this email.<br>
 See you on the rink!<br>
 <br>
 Audi<br>
-Finance &amp; Membership Chair
+Finance &amp; Membership Chair<br>
 Mad Wreckin' Dolls<br>
 <a href="mailto:finance@madwreckindolls.com">finance@madwreckindolls.com</a><br>
 <br>
