--- a/templates/emails/base.html
+++ b/templates/emails/base.html
@@ -1,9 +1,9 @@
 <html style="margin:0;padding:0;">
 <body>
 <div style="background-color:#eaeaea;margin:0;padding:0;">
-    <div style="height:18px;background-color:#35E5F4;"></div>
-    <div style="height:18px;background-color:#F9FC69;box-shadow:2px 5px 6px #888;"></div>
-    <div style="margin: 0 auto 0 auto;padding: 20px;background-color:white;width:600px;font-family: Arial, sans-serif;border-left: 1px solid #aeaeae; border-right: 1px solid #aeaeae;">
+    <div style="height:18px;background-color:#35E5F4;">&nbsp;</div>
+    <div style="height:18px;background-color:#F9FC69;box-shadow:2px 5px 6px #888;">&nbsp;</div>
+    <div style="margin: 0 auto 0 auto;padding: 20px;background-color:white;width:600px;font-family: Arial, sans-serif;border-left: 1px solid #aeaeae; border-right: 1px solid #aeaeae;line-height:140%;">
 
 {% block content %}
 {% endblock %}
