--- a/templates/emails/pre-reg-invite.html
+++ b/templates/emails/pre-reg-invite.html
@@ -3,21 +3,33 @@
 <br>
 Hello {{ skater_short_name }},<br>
 <br>
-Here is the link to register for the 2013 Fall session. Please fill out the required information and submit payment by September 15, 2013. You will receive a confirmation email after the form is completed.<br>
-<br>
-<b>If you are currently in Babydolls and want to skate with us if you do not get drafted, you will need to register now.</b> You must notify Audi by September 28, 2013 if you are not going to participate to get a full refund.<br>
-<br>
-<b>Please note, practice days and times are undetermined at this time.</b><br>
-<br>
+Here is the link to register for the 2013 Fall session. Please fill out the required information and submit payment by September 28, 2013. You will receive a confirmation email after the form is completed.<br>
 <br>
 <div style="font-size:20px;font-weight:bold;">
     <a href="https://madwreckindolls.com/registration/{{ skater.id }}/{{ skater.user_hash }}">Click Here to Register!</a>
 </div>
 <br>
+Please remember to not purchase any gear until you have attended a gear talk or have talked with Dude (<a href="mailto:fganson@gmail.com">fganson@gmail.com</a>). You will need to purchase a mouthguard by your first practice. We will be allowing gear to be borrowed for the first 2 weeks of practice. Skates will be available for the whole session.<br>
+<br>
+If you have derby experience and want to try to test into a level higher than 101, please contact Red and Dex at <a href="mailto:training@madwreckindolls.com">training@madwreckindolls.com.</a><br>
+<br>
+Important Dates:<br>
+<b>Sunday 9/29:</b> All League Meeting: 6-9 at the High Noon Saloon, 701 E Washington Ave, Madison, WI 53703<br>
+<b>Tuesday 10/1:</b> Start of the Fall Session: 101 will be practicing 4:30-6:30, doors open at 4:15<br>
+<b>Tuesday 10/1:</b> Gear Talk: 6:30-?, at Fast Forward after the 101 practice.<br>
+<b>Saturday 10/19:</b> Fall Welcome Party: Devil’s Lake, more information to come later<br>
+<br>
+Important Emails:<br>
+<b>For Information:</b> <a href="mailto:information@madwreckindolls.com">information@madwreckindolls.com</a><br>
+<b>Manager (Beaker):</b> <a href="mailto:events@madwreckindolls.com">manager@madwreckindolls.com</a><br>
+<b>Events (Zooey &amp; Smite):</b> <a href="mailto:events@madwreckindolls.com">events@madwreckindolls.com</a><br>
+<b>Training (Dex &amp; Red):</b> <a href="mailto:training@madwreckindolls.com">training@madwreckindolls.com</a><br>
+<b>Finance/Membership (Audi):</b> <a href="mailto:finance@madwreckindolls.com">finance@madwreckindolls.com</a><br>
+<br>
 If you have any questions or any problems with the form, please email Audi at <a href="mailto:finance@madwreckindolls.com">finance@madwreckindolls.com</a>.<br>
 <br>
 <b>The Auditor</b><br>
-Membership &amp; Finance Chair<br>
+Finance &amp; Membership Chair<br>
 Mad Wreckin Dolls<br>
 <br>
 
